[gd_scene load_steps=4 format=3 uid="uid://ndhkmmfbele4"]

[ext_resource type="Script" uid="uid://b261f8dk00dww" path="res://addons/godot_core_system/examples/tag_demo/tag_character.gd" id="1_5lwci"]
[ext_resource type="Script" uid="uid://xonpuf6mmtlm" path="res://addons/godot_core_system/examples/tag_demo/tag_demo.gd" id="1_mwg5h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_zzzzz"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TagDemo" type="Node2D"]
script = ExtResource("1_mwg5h")

[node name="Player" type="Node2D" parent="."]
position = Vector2(300, 300)
script = ExtResource("1_5lwci")

[node name="ColorRect" type="ColorRect" parent="Player"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.2, 0.6, 1, 1)

[node name="Label" type="Label" parent="Player"]
offset_left = -20.0
offset_top = 25.0
offset_right = 20.0
offset_bottom = 51.0
text = "Player"
horizontal_alignment = 1

[node name="Enemy" type="Node2D" parent="."]
position = Vector2(500, 300)
script = ExtResource("1_5lwci")

[node name="ColorRect" type="ColorRect" parent="Enemy"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 0.2, 0.2, 1)

[node name="Label" type="Label" parent="Enemy"]
offset_left = -20.0
offset_top = 25.0
offset_right = 20.0
offset_bottom = 51.0
text = "Enemy"
horizontal_alignment = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 230.0
offset_bottom = 221.0
theme_override_styles/panel = SubResource("StyleBoxFlat_zzzzz")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoveButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Toggle Move"

[node name="AttackButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Attack"

[node name="BuffButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Toggle Buff"

[node name="QueryButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Query Tags"

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 240.0
offset_right = 395.0
offset_bottom = 310.0
text = "Status: Ready"
autowrap_mode = 3

[node name="BuffLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 352.0
offset_right = 391.0
offset_bottom = 424.0
text = "Active Buffs: None"

[connection signal="pressed" from="UI/Panel/VBoxContainer/MoveButton" to="." method="_on_player_move_button_pressed"]
[connection signal="pressed" from="UI/Panel/VBoxContainer/AttackButton" to="." method="_on_player_attack_button_pressed"]
[connection signal="pressed" from="UI/Panel/VBoxContainer/BuffButton" to="." method="_on_buff_button_pressed"]
[connection signal="pressed" from="UI/Panel/VBoxContainer/QueryButton" to="." method="_on_query_button_pressed"]
